# F1-PITSTOP-ADVISOR

./: .gitignore  README.md  environment.yml  f1_flags_analysis.csv  pyproject.toml  setup.py
f1-pitstop-advisor/: .gitignore  README.md  pyproject.toml
f1-pitstop-advisor/conf/base/: catalog.yml  parameters.yml
f1-pitstop-advisor/pit_advisor_libraries/pit_advisor/: data_creation.py  experiment_creation.py  gather_data.py
f1-pitstop-advisor/src/f1_pitstop_advisor/: __init__.py  __main__.py  pipeline_registry.py  settings.py
f1-pitstop-advisor/src/f1_pitstop_advisor/pipelines/01_data_processing/: nodes.py  pipeline.py
f1-pitstop-advisor/src/f1_pitstop_advisor/pipelines/02_regressors/: nodes.py  pipeline.py
f1_pitstop_advisor/: data_acquisition.py  data_creation.py  data_processing_utils.py  experiment_creation.py  flag_data.py  flags_data.csv  gather_data.py  load_data_to_pickle.py  model_creation.py  process_data.ipynb
f1_pitstop_advisor/idea_one/: data_processing_utils.py  load_data.ipynb  process_data.ipynb
f1_pitstop_advisor/legacy/experiment_1/: 2_further_testing.ipynb  3_generate_strategies.ipynb
f1_pitstop_advisor/model_exploration/: initial_testing.ipynb  second_phase.ipynb
f1_pitstop_advisor/regression_model_exploration/: second_phase.ipynb
f1_pitstop_advisor/strategies/: generate_strategies.ipynb
