[tool.poetry]
name = "f1-pitstop-advisor"
version = "0.1.0"
description = ""
authors = ["kw-00 <christopher.p.wojcik@gmail.com>"]
readme = "README.md"
packages = [{include = "f1_pitstop_advisor"}]

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=2.2.3,<3.0.0"
ipykernel = "^6.29.5"
fastf1 = "^3.5.3"
scikit-learn = "^1.7.1"
xgboost = "^3.0.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
